Further UI improvements in the whole application